@@ -4,6 +4,7 @@
 
 === 1.0.8 ===
 * Added MIDI note to frequency convertion function dspu::midi_note_to_frequency.
+* Added set of functions to convert Neper to dB and gain values.
 
 === 1.0.7 ===
 * Added dspu::Analyzer::activity() method to check the analyzer's activity.
